Fix font on IE desktop

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -260,8 +260,6 @@ p{
 .menuActive {
   height: 40px !important;
   padding-top: 6px;
-  font-size: 1.2em;
-
 }
 
 .bottomMenu{
